# OpenGLSolarSystem

./: .gitignore  CMakeLists.txt  LICENSE  OpenGLSolarSystem.sln  README.md  vcpkg.json
OpenGLSolarSystem/: CMakeLists.txt  OpenGLSolarSystem.vcxproj  OpenGLSolarSystem.vcxproj.filters  Planet.cpp  Planet.h  RingSurface.cpp  RingSurface.h  Sphere.cpp  Sphere.h  Utils.h  fragShader.glsl  main.cpp  star_fragShader.glsl  star_vertShader.glsl  vertShader.glsl
OpenGLSolarSystem/shared/lib/: glfw3.lib  soil2-debug.lib
